# wiggly

./: .gitignore  1DWigglyEnergyMinimization.py  1DWigglyInversePosTangent.py  1DWigglyPosC2.py  CMakeLists.txt  README.md
help/nodes/sop/: wigglyconstraint.txt  wigglysolver.txt  wigglyspline.txt
hip/: demo.hipnc
otls/: wigglyconstraint.hdanc  wigglysolver.hdanc  wigglyspline.hdanc
src/: CMakeLists.txt  SOP_Wiggly.C  SOP_Wiggly.h  Wiggly.C  Wiggly.h
test/: 1DSprings.py  1DWigglyEnergyMinimization.py  1DWigglyInversePosTangent.py  1DWigglyPosC2.py  2DMesh.py  2DSprings.py
